# midi

./: .clang-format  CMakeLists.txt  WiringPi.h  bank.h  device_adlib.c  device_microsoft.c  gpio.cpp  gpio.h  libmidi.c  libmidi.h  midiplay.c  midiplay.h  miditool.c  oplpi.c  serial.cpp  serial.h  testmidi.py  testmidi.py.in
data/: CC_Chip_01-KM.mid  CC_Chip_02-KM.mid  DKHALLJA.mid  Symphony_BM.mid
data/7thguest/: 04-doorbell.mid  05-guests.mid  agu16.mid  agu32.mid  agu38.mid  agu50.mid  gu05.mid  gu06.mid  gu08.mid  gu09.mid  gu11a.mid  gu11b.mid  gu12.mid  gu15.mid  gu16.mid  gu16b.mid  gu17.mid  gu18.mid  gu19.mid  gu20.mid  gu21.mid  gu22.mid  gu23.mid  gu24.mid  gu25.mid  gu26.mid  gu27.mid  gu28.mid  gu29.mid  gu30.mid  gu31.mid  gu32.mid  gu33.mid  gu34.mid  gu35.mid  gu36.mid  gu37.mid  gu38.mid  gu39.mid  gu40.mid  (+31 more)
data/Doom_2/: The Crusher.mid  The Pit.mid
data/Dune_2/: DUNE2034.MID  DUNE2039.MID  DUNE2042.MID  DUNE2043.MID  DUNE2046.MID  DUNE2049.MID  DUNE2064.MID
data/Final_Fantasy_7/: 2-07 Electric de Chocobo Xg.mid
data/Final_Fantasy_8/: 1-01-Liberi_Fatali.mid  1-02-Balamb_Garden.mid  1-03-Blue_Fields.mid  1-05-The_Winner.mid  1-07-Seed.mid  1-08-The_Landing.mid  1-09-Starting_Up.mid  1-10-Force_Your_Way.mid  1-11-The_Loser.mid  1-13-Dead_End.mid  1-14-Breezy.mid  1-15-Shuffle_or_Boogie.mid  1-16-Waltz_for_the_Moon.mid  1-17-Tell_Me.mid  1-18-Fear.mid  1-19-The_Man_With_the_Machine_Gun.mid  1-20-Julia.mid  1-21-Roses_and_Wine.mid  1-22-Junction.mid  1-23-Timber_Owls.mid  2-01-My_Mind.mid  2-02-The_Mission.mid  2-03-Martial_Law.mid  2-08-Unrest.mid  (+46 more)
(+524 files in other folders)
